--- a/data_sci_out/4. Recommender systems/new_way_of_vect_constr.ipynb
+++ b/data_sci_out/4. Recommender systems/new_way_of_vect_constr.ipynb
@@ -19,8 +19,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import json\n",
@@ -56,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +156,7 @@
        "4  1308009600   [2, 2]  "
       ]
      },
-     "execution_count": 57,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,19 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "training_df, test_df = split_df_by_dt(df, p=0.8)\n",
-    "del df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -205,7 +195,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Min=939859200, border=1377129600.0, max=1405987200\n",
+      "Размер до очистки: (185427, 6) (46353, 6)\n",
+      "Размер после очистки: (185427, 6) (19174, 6)\n"
+     ]
+    }
+   ],
+   "source": [
+    "training_df, test_df = split_df_by_dt(df, p=0.8)\n",
+    "del df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -220,10 +230,11 @@
     "    cntr = 0 # счетчик строк\n",
     "    texts = [] # массив текстов\n",
     "    items_list = [] # массив для промежуточного хранения векторов объектов\n",
+    "    iid_to_row = {}\n",
     "    \n",
     "    for iid in df.iid.unique():\n",
     "        dummy = []\n",
-    "        for rewiew in df.loc[df.iid == iid].review:\n",
+    "        for review in df.loc[df.iid == iid].review:\n",
     "            dummy.append(cntr)\n",
     "            texts.append(review)\n",
     "            cntr+=1\n",
@@ -234,10 +245,10 @@
     "    voc_len = len(tfvect.vocabulary_)\n",
     "        \n",
     "    for iid, rows in id_dict.items():\n",
-    "        item_vec = csr_matrix((1,voc_len))\n",
+    "        item_vect = csr_matrix((1,voc_len))\n",
     "        for i in rows:\n",
     "            review = texts[i]\n",
-    "            vect = tfidfvectorizer.transform(review)\n",
+    "            vect = tfvect.transform([review])\n",
     "            item_vect += vect\n",
     "        item_vect = item_vect/len(rows)\n",
     "        items_list.append(item_vect)\n",
@@ -249,6 +260,232 @@
     "        del texts\n",
     "    \n",
     "    return items_matrix, iid_to_row"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "items_matrix, iid_to_row = prepare_items_matrix(training_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<10098x197239 sparse matrix of type '<class 'numpy.float64'>'\n",
+       "\twith 7356087 stored elements in Compressed Sparse Row format>"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "items_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "class BasicRecommender(object):\n",
+    "    def __init__(self):\n",
+    "        pass\n",
+    "    \n",
+    "    def get_recs(self, uid, top):\n",
+    "        \"\"\"Строит рекомендации для пользователя uid\n",
+    "        :return: словарь типа {iid: score, ...}\n",
+    "        \"\"\"\n",
+    "        return {}\n",
+    "    \n",
+    "    def get_batch_recs(self, uids, top):\n",
+    "        \"\"\"Строит рекомендации для нескольких пользователей uids\n",
+    "        :return: словарь типа {uid: {iid: score, ...}, ...}\n",
+    "        \"\"\"\n",
+    "        return {uid: self.get_recs(uid, top) for uid in uids}\n",
+    "    \n",
+    "class NonPersRecommender(BasicRecommender):\n",
+    "    \n",
+    "    def __init__(self, df):\n",
+    "        super(NonPersRecommender, self).__init__()\n",
+    "        self.recs = self._prepare_recs(df)\n",
+    "        \n",
+    "    def _prepare_recs(self, df):\n",
+    "        return pd.Series([])\n",
+    "    \n",
+    "    def get_recs(self, uid, top):\n",
+    "        from collections import OrderedDict\n",
+    "        return OrderedDict(self.recs[:top])\n",
+    "    \n",
+    "    def get_batch_recs(self, uids, top):\n",
+    "        non_pers_recs = self.get_recs(None, top)\n",
+    "        return {uid: non_pers_recs for uid in uids}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def get_test_dict(test_df):\n",
+    "    \"\"\"Функция, конвертирующая тестовый df в словарь\n",
+    "    \"\"\"\n",
+    "    test_dict = {}\n",
+    "    for t in test_df.itertuples():\n",
+    "        test_dict.setdefault(t.uid, {})\n",
+    "        test_dict[t.uid][t.iid] = t.rating\n",
+    "    return test_dict\n",
+    "\n",
+    "test_dict = get_test_dict(test_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def hit_ratio(recs_dict, test_dict):\n",
+    "    \"\"\"Функция считает метрику hit-ration для двух словарей\n",
+    "    :recs_dict: словарь рекомендаций типа {uid: {iid: score, ...}, ...}\n",
+    "    :test_dict: тестовый словарь типа {uid: {iid: score, ...}, ...}\n",
+    "    \"\"\"\n",
+    "    hits = 0\n",
+    "    for uid in test_dict:\n",
+    "        if set(test_dict[uid].keys()).intersection(recs_dict.get(uid, {})):\n",
+    "            hits += 1\n",
+    "    return hits / len(test_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ContentBasedRecommender(NonPersRecommender):\n",
+    "    \n",
+    "    def __init__(self, items_matrix, iid_to_ind, train_df, max_features=None, use_dt=True, use_ratings=False):\n",
+    "        super(NonPersRecommender, self).__init__()\n",
+    "\n",
+    "        from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "        import numpy as np\n",
+    "        import pandas as pd\n",
+    "        \n",
+    "\n",
+    "        self.items_matrix = items_matrix #TfidfVectorizer(stop_words='english', max_features=max_features).fit_transform(text_array)\n",
+    "        #self.uid_to_ind = uid_to_ind\n",
+    "        self.iid_to_ind = iid_to_ind\n",
+    "        self.df = train_df[['iid','uid', 'dt', 'rating']]\n",
+    "        self.use_ratings = use_ratings\n",
+    "        self.use_dt = use_dt\n",
+    "        self.DICT_LEN = self.items_matrix.shape[1]\n",
+    "        self.uinque_ids = train_df.iid.unique()\n",
+    "        \n",
+    "    def get_recs(self, uids_to_recommend, top_k=10):\n",
+    "        self.recs = self._prepare_recs(uids_to_recommend, top_k)\n",
+    "        return self.recs\n",
+    "\n",
+    "    def select_item(source_matrix, keys_to_index, key_, exclude_keys):\n",
+    "        if key_ in exclude_keys:\n",
+    "            return 0\n",
+    "        else:\n",
+    "            return source_matrix[0, keys_to_index[key_]]\n",
+    "        \n",
+    "    def _prepare_recs(self, uids_to_recommend, top_k):\n",
+    "        from sklearn.metrics.pairwise import cosine_similarity\n",
+    "        from scipy.sparse import csr_matrix\n",
+    "        recs = {}\n",
+    "        for uid in uids_to_recommend:\n",
+    "            user_df = self.df[self.df.uid == uid]\n",
+    "            user_items = user_df.iid\n",
+    "\n",
+    "            if self.use_dt:\n",
+    "                user_dt = user_df.dt\n",
+    "                user_dt = user_dt/max(user_dt)\n",
+    "            else:\n",
+    "                user_dt = np.ones(len(user_items))\n",
+    "\n",
+    "            if self.use_ratings:\n",
+    "                user_ratings = user_df.rating\n",
+    "            else:\n",
+    "                user_ratings = np.ones(len(user_items))\n",
+    "\n",
+    "            #инициализируем вектор плбьзователя\n",
+    "            user_vect = csr_matrix((1, self.DICT_LEN))\n",
+    "\n",
+    "            #вектор пользователя\n",
+    "            for iid, time, rating in zip(user_items, user_dt, user_ratings):\n",
+    "                item_vect = self.items_matrix.getrow(self.iid_to_ind[iid])\n",
+    "                user_vect += item_vect.multiply(time*rating)\n",
+    "\n",
+    "            #вектор схожести для пользователя\n",
+    "            sim_vector = cosine_similarity(user_vect, self.items_matrix, dense_output=True)\n",
+    "            #item_with_score = { iid: select_item(sim_vector, self.iid_to_ind, iid, user_items) for iid in self.iid_to_ind.keys() }\n",
+    "            items_with_score = { iid: sim_vector[0, self.iid_to_ind[iid]] for iid in set(self.uinque_ids).difference(set(user_items)) }\n",
+    "            user_recs = sorted([(k,v) for k,v in items_with_score.items()], key=lambda x: -x[1])[:top_k]\n",
+    "            user_recs = dict(user_recs)\n",
+    "            recs[uid] = user_recs\n",
+    "\n",
+    "        return recs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "recommender = ContentBasedRecommender(items_matrix, iid_to_row, training_df, use_dt=False, use_ratings=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "uids_to_recommend = test_dict.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.07630227439471754"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "recs = recommender.get_recs(uids_to_recommend)\n",
+    "hit_ratio(recs, test_dict)"
    ]
   },
   {
