Lab part 2 done

--- a/data_sci_out/4. Recommender systems/for_review/Lab_part_2/Task_2_alt_vector_construction.ipynb
+++ b/data_sci_out/4. Recommender systems/for_review/Lab_part_2/Task_2_alt_vector_construction.ipynb
@@ -1,13 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Games RSs"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -18,60 +11,15 @@
     "# импорты, которые точно понадобятся\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "\n",
-    "from scipy.sparse import csr_matrix\n",
-    "%matplotlib inline\n",
-    "import matplotlib.pyplot as plt"
+    "# Данные взяты отсюда - http://jmcauley.ucsd.edu/data/amazon/\n",
+    "# http://snap.stanford.edu/data/amazon/productGraph/categoryFiles/reviews_Video_Games_5.json.gz\n",
+    "JSON_DATA_PATH = \"lab_data/Video_Games_5.json\"\n",
+    "N = 10\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "from scipy.sparse import random\n",
-    "from scipy.sparse import save_npz"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "from scipy.sparse import load_npz\n",
-    "from scipy.sparse import vstack"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# Данные взяты отсюда - http://jmcauley.ucsd.edu/data/amazon/\n",
-    "# http://snap.stanford.edu/data/amazon/productGraph/categoryFiles/reviews_Video_Games_5.json.gz\n",
-    "JSON_DATA_PATH = \"lab_data/Video_Games_5.json\"\n",
-    "N = 10"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Анализ данных"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -86,29 +34,32 @@
     "            yield data\n",
     "            \n",
     "def get_data_frame():\n",
+    "    import re\n",
     "    uid_to_id = {}\n",
     "    iid_to_id = {}\n",
     "    \n",
-    "    cols = [\"uid\", \"iid\", \"review\", \"rating\", \"dt\"]\n",
+    "    cols = [\"uid\", \"iid\", \"review\", \"rating\", \"dt\", 'useful']\n",
     "    rows = []\n",
+    "\n",
     "    for d in iter_json_data(JSON_DATA_PATH):\n",
     "        uid = uid_to_id.setdefault(d[\"reviewerID\"], len(uid_to_id))\n",
     "        iid = iid_to_id.setdefault(d[\"asin\"], len(iid_to_id))\n",
     "        review = d[\"reviewText\"]\n",
     "        rating = float(d[\"overall\"])\n",
     "        dt = int(d[\"unixReviewTime\"])\n",
-    "        rows.append((uid, iid, review, rating, dt))\n",
+    "        useful = d[\"helpful\"]\n",
+    "        rows.append((uid, iid, review, rating, dt, useful))\n",
     "        \n",
     "        \n",
-    "    return pd.DataFrame(rows, columns=cols)"
+    "    return pd.DataFrame(rows, columns=cols)\n",
+    "\n",
+    "df = get_data_frame()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -136,6 +87,7 @@
        "      <th>review</th>\n",
        "      <th>rating</th>\n",
        "      <th>dt</th>\n",
+       "      <th>useful</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -146,6 +98,7 @@
        "      <td>Installing the game was a struggle (because of...</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1341792000</td>\n",
+       "      <td>[8, 12]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -154,6 +107,7 @@
        "      <td>If you like rally cars get this game you will ...</td>\n",
        "      <td>4.0</td>\n",
        "      <td>1372550400</td>\n",
+       "      <td>[0, 0]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -162,6 +116,7 @@
        "      <td>1st shipment received a book instead of the ga...</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1403913600</td>\n",
+       "      <td>[0, 0]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -170,6 +125,7 @@
        "      <td>I got this version instead of the PS3 version,...</td>\n",
        "      <td>3.0</td>\n",
        "      <td>1315958400</td>\n",
+       "      <td>[7, 10]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -178,6 +134,7 @@
        "      <td>I had Dirt 2 on Xbox 360 and it was an okay ga...</td>\n",
        "      <td>4.0</td>\n",
        "      <td>1308009600</td>\n",
+       "      <td>[2, 2]</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -191,95 +148,26 @@
        "3    3    0  I got this version instead of the PS3 version,...     3.0   \n",
        "4    4    0  I had Dirt 2 on Xbox 360 and it was an okay ga...     4.0   \n",
        "\n",
-       "           dt  \n",
-       "0  1341792000  \n",
-       "1  1372550400  \n",
-       "2  1403913600  \n",
-       "3  1315958400  \n",
-       "4  1308009600  "
+       "           dt   useful  \n",
+       "0  1341792000  [8, 12]  \n",
+       "1  1372550400   [0, 0]  \n",
+       "2  1403913600   [0, 0]  \n",
+       "3  1315958400  [7, 10]  \n",
+       "4  1308009600   [2, 2]  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = get_data_frame()\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "min-max количество объектов на пользователя: 5 773\n",
-      "min-max количество пользователей на объект: 5 802\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"min-max количество объектов на пользователя:\", \n",
-    "      df.groupby(\"uid\").iid.nunique().min(), df.groupby(\"uid\").iid.nunique().max())\n",
-    "print(\"min-max количество пользователей на объект:\", \n",
-    "      df.groupby(\"iid\").uid.nunique().min(), df.groupby(\"iid\").uid.nunique().max())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([1], dtype=int64)"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# проверяем, есть ли случаи, когда один и тот же пользователь оставляет отзывы на один и тот же объект\n",
-    "df.groupby([\"uid\", \"iid\"]).review.count().unique()  # ура, таких случаев нет"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Количество объектов: 10672\n",
-      "Количество пользователей: 24303\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"Количество объектов:\", df.iid.unique().size)\n",
-    "print(\"Количество пользователей:\", df.uid.unique().size)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Готовим выборки"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -307,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -315,8 +203,8 @@
      "output_type": "stream",
      "text": [
       "Min=939859200, border=1377129600.0, max=1405987200\n",
-      "Размер до очистки: (185427, 5) (46353, 5)\n",
-      "Размер после очистки: (185427, 5) (19174, 5)\n"
+      "Размер до очистки: (185427, 6) (46353, 6)\n",
+      "Размер после очистки: (185427, 6) (19174, 6)\n"
      ]
     }
    ],
@@ -327,88 +215,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def clean_df(df, min_review_per_uid, min_review_per_iid):\n",
-    "    \"\"\"Функция удаляет из df строки, соответствующие пользователям и объектам, \n",
-    "    у которых меньше min_review_per_uid и min_review_per_iid отзывов соответственно\n",
-    "    \"\"\"\n",
-    "    _df = df.copy()\n",
-    "    while True:\n",
-    "        review_per_uid = _df.groupby(\"uid\").review.count()\n",
-    "        bad_uids = review_per_uid[review_per_uid < min_review_per_uid].index\n",
+    "def prepare_items_matrix(df, max_features=None, del_texts=True):\n",
+    "    from scipy.sparse import csr_matrix\n",
+    "    from scipy.sparse import vstack\n",
+    "    from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "    \n",
-    "        review_per_iid = _df.groupby(\"iid\").review.count()\n",
-    "        bad_iids = review_per_iid[review_per_iid < min_review_per_iid].index\n",
+    "    id_dict = {} # сщщтветствие id объекта и перечня строк, относящихся к этому объекту в df\n",
+    "    cntr = 0 # счетчик строк\n",
+    "    texts = [] # массив текстов\n",
+    "    items_list = [] # массив для промежуточного хранения векторов объектов\n",
+    "    iid_to_row = {}\n",
+    "    \n",
+    "    for iid in df.iid.unique():\n",
+    "        dummy = []\n",
+    "        for review in df.loc[df.iid == iid].review:\n",
+    "            dummy.append(cntr)\n",
+    "            texts.append(review)\n",
+    "            cntr+=1\n",
+    "        id_dict[iid] = dummy\n",
+    "    \n",
+    "    # создаем векторизатор\n",
+    "    tfvect = TfidfVectorizer(stop_words='english', max_features=max_features).fit(texts)\n",
+    "    voc_len = len(tfvect.vocabulary_)\n",
     "        \n",
-    "        if bad_uids.shape[0] > 0 or bad_iids.shape[0] > 0:\n",
-    "            _df = _df[(~_df.uid.isin(bad_uids)) & (~_df.iid.isin(bad_iids))]\n",
-    "        else:\n",
-    "            break\n",
-    "    return _df"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    " ## Метрика"
+    "    for iid, rows in id_dict.items():\n",
+    "        item_vect = csr_matrix((1,voc_len))\n",
+    "        for i in rows:\n",
+    "            review = texts[i]\n",
+    "            vect = tfvect.transform([review])\n",
+    "            item_vect += vect\n",
+    "        item_vect = item_vect/len(rows)\n",
+    "        items_list.append(item_vect)\n",
+    "        iid_to_row[iid] = iid_to_row.setdefault(iid, len(iid_to_row))\n",
+    "    \n",
+    "    items_matrix = vstack(items_list)\n",
+    "    del items_list\n",
+    "    if del_texts:\n",
+    "        del texts\n",
+    "    \n",
+    "    return items_matrix, iid_to_row"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def hit_ratio(recs_dict, test_dict):\n",
-    "    \"\"\"Функция считает метрику hit-ration для двух словарей\n",
-    "    :recs_dict: словарь рекомендаций типа {uid: {iid: score, ...}, ...}\n",
-    "    :test_dict: тестовый словарь типа {uid: {iid: score, ...}, ...}\n",
-    "    \"\"\"\n",
-    "    hits = 0\n",
-    "    for uid in test_dict:\n",
-    "        if set(test_dict[uid].keys()).intersection(recs_dict.get(uid, {})):\n",
-    "            hits += 1\n",
-    "    return hits / len(test_dict)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def get_test_dict(test_df):\n",
-    "    \"\"\"Функция, конвертирующая тестовый df в словарь\n",
-    "    \"\"\"\n",
-    "    test_dict = {}\n",
-    "    for t in test_df.itertuples():\n",
-    "        test_dict.setdefault(t.uid, {})\n",
-    "        test_dict[t.uid][t.iid] = t.rating\n",
-    "    return test_dict\n",
-    "\n",
-    "test_dict = get_test_dict(test_df)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Базовые классы для рекомендательной системы"
+    "items_matrix, iid_to_row = prepare_items_matrix(training_df)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<10098x197239 sparse matrix of type '<class 'numpy.float64'>'\n",
+       "\twith 7356087 stored elements in Compressed Sparse Row format>"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "items_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -449,13 +337,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Векторизуем объекты и строим рекомендации"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {
@@ -463,20 +344,41 @@
    },
    "outputs": [],
    "source": [
-    "item_ids = training_df.iid.unique() # уникальные идентификаторы объектов в тренировочной выборке\n",
-    "id_to_ind = {}\n",
-    "texts = []\n",
+    "def get_test_dict(test_df):\n",
+    "    \"\"\"Функция, конвертирующая тестовый df в словарь\n",
+    "    \"\"\"\n",
+    "    test_dict = {}\n",
+    "    for t in test_df.itertuples():\n",
+    "        test_dict.setdefault(t.uid, {})\n",
+    "        test_dict[t.uid][t.iid] = t.rating\n",
+    "    return test_dict\n",
     "\n",
-    "# для каждого id из item_ids формируется \"суммарное\" описание из отзывово нескольких пользователей\n",
-    "for id in item_ids:\n",
-    "    text = training_df[training_df.iid == id].review.str.cat(sep=' ')\n",
-    "    texts.append(text)\n",
-    "    id_to_ind[id] = id_to_ind.setdefault(id, len(id_to_ind)) "
+    "test_dict = get_test_dict(test_df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def hit_ratio(recs_dict, test_dict):\n",
+    "    \"\"\"Функция считает метрику hit-ration для двух словарей\n",
+    "    :recs_dict: словарь рекомендаций типа {uid: {iid: score, ...}, ...}\n",
+    "    :test_dict: тестовый словарь типа {uid: {iid: score, ...}, ...}\n",
+    "    \"\"\"\n",
+    "    hits = 0\n",
+    "    for uid in test_dict:\n",
+    "        if set(test_dict[uid].keys()).intersection(recs_dict.get(uid, {})):\n",
+    "            hits += 1\n",
+    "    return hits / len(test_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
    "metadata": {
     "collapsed": true
    },
@@ -484,7 +386,7 @@
    "source": [
     "class ContentBasedRecommender(NonPersRecommender):\n",
     "    \n",
-    "    def __init__(self, text_array, iid_to_ind, train_df, max_features=None, use_dt=True, use_ratings=False):\n",
+    "    def __init__(self, items_matrix, iid_to_ind, train_df, max_features=None, use_dt=True, use_ratings=False):\n",
     "        super(NonPersRecommender, self).__init__()\n",
     "\n",
     "        from sklearn.feature_extraction.text import TfidfVectorizer\n",
@@ -492,7 +394,8 @@
     "        import pandas as pd\n",
     "        \n",
     "\n",
-    "        self.items_matrix = TfidfVectorizer(stop_words='english', max_features=max_features).fit_transform(text_array)\n",
+    "        self.items_matrix = items_matrix #TfidfVectorizer(stop_words='english', max_features=max_features).fit_transform(text_array)\n",
+    "        #self.uid_to_ind = uid_to_ind\n",
     "        self.iid_to_ind = iid_to_ind\n",
     "        self.df = train_df[['iid','uid', 'dt', 'rating']]\n",
     "        self.use_ratings = use_ratings\n",
@@ -504,9 +407,6 @@
     "        self.recs = self._prepare_recs(uids_to_recommend, top_k)\n",
     "        return self.recs\n",
     "\n",
-    "    def valid_ids(bought_ids):\n",
-    "        return set(self.unique_ids).difference(set(bought_ids))\n",
-    "    \n",
     "    def select_item(source_matrix, keys_to_index, key_, exclude_keys):\n",
     "        if key_ in exclude_keys:\n",
     "            return 0\n",
@@ -515,6 +415,7 @@
     "        \n",
     "    def _prepare_recs(self, uids_to_recommend, top_k):\n",
     "        from sklearn.metrics.pairwise import cosine_similarity\n",
+    "        from scipy.sparse import csr_matrix\n",
     "        recs = {}\n",
     "        for uid in uids_to_recommend:\n",
     "            user_df = self.df[self.df.uid == uid]\n",
@@ -541,8 +442,9 @@
     "\n",
     "            #вектор схожести для пользователя\n",
     "            sim_vector = cosine_similarity(user_vect, self.items_matrix, dense_output=True)\n",
-    "            item_with_score = { iid: sim_vector[0, self.iid_to_ind[iid]] for iid in set(self.uinque_ids).difference(set(user_items)) }\n",
-    "            user_recs = sorted([(k,v) for k,v in item_with_score.items()], key=lambda x: -x[1])[:top_k]\n",
+    "            #item_with_score = { iid: select_item(sim_vector, self.iid_to_ind, iid, user_items) for iid in self.iid_to_ind.keys() }\n",
+    "            items_with_score = { iid: sim_vector[0, self.iid_to_ind[iid]] for iid in set(self.uinque_ids).difference(set(user_items)) }\n",
+    "            user_recs = sorted([(k,v) for k,v in items_with_score.items()], key=lambda x: -x[1])[:top_k]\n",
     "            user_recs = dict(user_recs)\n",
     "            recs[uid] = user_recs\n",
     "\n",
@@ -551,43 +453,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 48,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "recommender = ContentBasedRecommender(texts, id_to_ind, training_df, use_dt=False, use_ratings=False)"
+    "recommender = ContentBasedRecommender(items_matrix, iid_to_row, training_df, use_dt=False, use_ratings=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
-   "metadata": {},
+   "execution_count": 49,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "recs = recommender.get_recs(test_dict.keys())"
+    "uids_to_recommend = test_dict.keys()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.082"
+       "0.07630227439471754"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "recs = recommender.get_recs(uids_to_recommend)\n",
     "hit_ratio(recs, test_dict)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
