--- a/data_sci_out/4. Recommender systems/for_review/Lab_part_2/Task_2_basic_to_show.ipynb
+++ b/data_sci_out/4. Recommender systems/for_review/Lab_part_2/Task_2_basic_to_show.ipynb
@@ -403,112 +403,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Разбиение задачи на блоки"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "Nsplit = 25\n",
-    "uid_to_ind_train = {}\n",
-    "uid_to_ind_test = {}\n",
-    "\n",
-    "unique_users_train = training_df.uid.unique()\n",
-    "n_unique_train = len(unique_users_train)\n",
-    "\n",
-    "unique_users_test = test_df.uid.unique()\n",
-    "n_unique_test = len(unique_users_test)\n",
-    "\n",
-    "for uid in unique_users_train:\n",
-    "    uid_to_ind_train[uid] = uid_to_ind_train.setdefault(uid, len(uid_to_ind_train))\n",
-    "    \n",
-    "for uid in unique_users_test:\n",
-    "    uid_to_ind_test[uid] = uid_to_ind_test.setdefault(uid, len(uid_to_ind_test))\n",
-    "    \n",
-    "ind_to_uid_train = { v: k for k, v in uid_to_ind_train.items() }\n",
-    "ind_to_uid_test = { v: k for k, v in uid_to_ind_test.items() }"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "from math import ceil\n",
-    "block_len = ceil(n_unique_train/Nsplit)\n",
-    "\n",
-    "# создаем список диапазонов индексов\n",
-    "block_list = [] # элементы списка - локальные индексы пользователей в блоке [ {id: uid, ...}, ...]\n",
-    "for i in range(Nsplit):\n",
-    "    start = i*block_len\n",
-    "    end = (i+1)*block_len\n",
-    "    loc_ind = 0\n",
-    "    dummy_dict = {}\n",
-    "    for j in range(start, min(end, n_unique_train)):\n",
-    "        dummy_dict[loc_ind] = ind_to_uid_train[j]\n",
-    "        loc_ind += 1\n",
-    "    block_list.append(dummy_dict)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    " # элементы списка - локальные индексы пользователей в блоке [ {uid: id, ...}, ...]\n",
-    "uid_block_list = [ { v: k for k, v in block_list[i].items() } for i in range(Nsplit)] "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def get_block_number(id_, list_of_blocks):\n",
-    "    for i in range(len(list_of_blocks)):\n",
-    "        if id_ in list_of_blocks[i].keys():\n",
-    "            return i"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "data = []\n",
-    "for uid in unique_users_test:\n",
-    "    data.append((uid, get_block_number(uid, uid_block_list)))\n",
-    "uids_test_map = pd.DataFrame(data, columns=['uid', 'block'], dtype='int64')\n",
-    "del data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Базовые классы для рекомендательной системы"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -549,64 +449,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# выбирает соответсвие id объекта - rating, уже приобретенные объекты (exclude keys) исключаются\n",
-    "def select_item(source_matrix, keys_to_index, key_, exclude_keys):\n",
-    "    if key_ in exclude_keys:\n",
-    "        return 0\n",
-    "    else:\n",
-    "        return source_matrix[0, keys_to_index[key_]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "class ContentBasedRecommender_dummy(NonPersRecommender):\n",
-    "    \n",
-    "    def __init__(self, uid_to_ind, iid_to_ind, train_df, sim_matrix):\n",
-    "        super(NonPersRecommender, self).__init__()\n",
-    "        self.uid_to_ind = uid_to_ind\n",
-    "        self.iid_to_ind = iid_to_ind\n",
-    "        self.train_df = train_df\n",
-    "        self.sim_matrix = sim_matrix\n",
-    "        #self.recs = self._prepare_recs(uid_to_ind, iid_to_ind, train_df, sim_matrix)\n",
-    "        \n",
-    "    def get_recs(self, uids_to_recommend, top_k=10):\n",
-    "        self.recs = self._prepare_recs(uids_to_recommend, self.uid_to_ind, self.iid_to_ind, self.train_df, self.sim_matrix, top_k)\n",
-    "        return self.recs\n",
-    "        \n",
-    "    def _prepare_recs(self, uids_to_recommend, uid_to_ind, iid_to_ind, train_df, sim_matrix, top_k):\n",
-    "        out = {}\n",
-    "        for uid in uids_to_recommend:\n",
-    "            already_bought_items = train_df[train_df.uid == uid].iid.values\n",
-    "            sim_row = sim_matrix.getrow(uid_to_ind[uid]).todense()\n",
-    "            item_with_score = { iid: select_item(sim_row, iid_to_ind, iid, already_bought_items) for iid in iid_to_ind.keys() }\n",
-    "            dummy = pd.Series(item_with_score).sort_values(ascending=False)[:top_k].to_dict()\n",
-    "            out[uid] = dummy\n",
-    "        return out"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Векторизуем объекты"
+    "## Векторизуем объекты и строим рекомендации"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -625,195 +476,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "from sklearn.feature_extraction.text import TfidfVectorizer"
+    "class ContentBasedRecommender(NonPersRecommender):\n",
+    "    \n",
+    "    def __init__(self, text_array, iid_to_ind, train_df, max_features=None, use_dt=True, use_ratings=False):\n",
+    "        super(NonPersRecommender, self).__init__()\n",
+    "\n",
+    "        from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "        import numpy as np\n",
+    "        import pandas as pd\n",
+    "        \n",
+    "\n",
+    "        self.items_matrix = TfidfVectorizer(stop_words='english', max_features=max_features).fit_transform(text_array)\n",
+    "        self.iid_to_ind = iid_to_ind\n",
+    "        self.df = train_df[['iid','uid', 'dt', 'rating']]\n",
+    "        self.use_ratings = use_ratings\n",
+    "        self.use_dt = use_dt\n",
+    "        self.DICT_LEN = self.items_matrix.shape[1]\n",
+    "        self.uinque_ids = train_df.iid.unique()\n",
+    "        \n",
+    "    def get_recs(self, uids_to_recommend, top_k=10):\n",
+    "        self.recs = self._prepare_recs(uids_to_recommend, top_k)\n",
+    "        return self.recs\n",
+    "        \n",
+    "    def _prepare_recs(self, uids_to_recommend, top_k):\n",
+    "        cntr = 0\n",
+    "        from sklearn.metrics.pairwise import cosine_similarity\n",
+    "        recs = {}\n",
+    "        for uid in uids_to_recommend:\n",
+    "            if (cntr % 500) == 0:\n",
+    "                print('count {} id {}'.format(cntr, uid))\n",
+    "            cntr+=1\n",
+    "            user_df = self.df[self.df.uid == uid]\n",
+    "            user_items = user_df.iid\n",
+    "\n",
+    "            if self.use_dt:\n",
+    "                user_dt = user_df.dt\n",
+    "                user_dt = user_dt/max(user_dt)\n",
+    "            else:\n",
+    "                user_dt = np.ones(len(user_items))\n",
+    "\n",
+    "            if self.use_ratings:\n",
+    "                user_ratings = user_df.rating\n",
+    "            else:\n",
+    "                user_ratings = np.ones(len(user_items))\n",
+    "\n",
+    "            #инициализируем вектор плбьзователя\n",
+    "            user_vect = csr_matrix((1, self.DICT_LEN))\n",
+    "\n",
+    "            #вектор пользователя\n",
+    "            for iid, time, rating in zip(user_items, user_dt, user_ratings):\n",
+    "                item_vect = self.items_matrix.getrow(self.iid_to_ind[iid])\n",
+    "                user_vect += item_vect.multiply(time*rating)\n",
+    "\n",
+    "            #вектор схожести для пользователя\n",
+    "            sim_vector = cosine_similarity(user_vect, self.items_matrix, dense_output=True)\n",
+    "            item_with_score = { iid: sim_vector[0, self.iid_to_ind[iid]] for iid in set(self.uinque_ids).difference(set(user_items)) }\n",
+    "            user_recs = sorted([(k,v) for k,v in item_with_score.items()], key=lambda x: -x[1])[:top_k]\n",
+    "            user_recs = dict(user_recs)\n",
+    "            recs[uid] = user_recs\n",
+    "\n",
+    "        return recs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "my_tfidf = TfidfVectorizer(stop_words='english')\n",
-    "items_matrix = my_tfidf.fit_transform(texts)"
+    "recommender = ContentBasedRecommender(texts, id_to_ind, training_df, use_dt=False, use_ratings=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "del texts"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "del my_tfidf"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<10098x197239 sparse matrix of type '<class 'numpy.float64'>'\n",
-       "\twith 7356087 stored elements in Compressed Sparse Row format>"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "items_matrix "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.0036933349741668582"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "items_matrix.nnz/(items_matrix .shape[0]*items_matrix .shape[1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "DICT_LEN = items_matrix.shape[1]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Строим рекомендации"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 block done\n",
-      "1 block done\n",
-      "2 block done\n",
-      "3 block done\n",
-      "4 block done\n",
-      "5 block done\n",
-      "6 block done\n",
-      "7 block done\n",
-      "8 block done\n",
-      "9 block done\n",
-      "10 block done\n",
-      "11 block done\n",
-      "12 block done\n",
-      "13 block done\n",
-      "14 block done\n",
-      "15 block done\n",
-      "16 block done\n",
-      "17 block done\n",
-      "18 block done\n",
-      "19 block done\n",
-      "20 block done\n",
-      "21 block done\n",
-      "22 block done\n",
-      "23 block done\n",
-      "24 block done\n"
+      "count 0 id 2\n",
+      "count 500 id 6311\n",
+      "count 1000 id 11558\n",
+      "count 1500 id 10021\n",
+      "count 2000 id 3216\n",
+      "count 2500 id 12188\n",
+      "count 3000 id 15970\n",
+      "count 3500 id 22696\n",
+      "count 4000 id 18706\n",
+      "count 4500 id 21758\n",
+      "count 5000 id 5540\n",
+      "count 5500 id 20733\n",
+      "count 6000 id 18995\n",
+      "count 6500 id 16797\n"
      ]
     }
    ],
    "source": [
-    "from scipy.sparse import vstack\n",
-    "from sklearn.metrics.pairwise import cosine_similarity\n",
-    "\n",
-    "gl_recs = {} #будущий словарь с рекомендациями\n",
-    "\n",
-    "for i in range(Nsplit):\n",
-    "    block = block_list[i]\n",
-    "    uid_to_ind_loc = uid_block_list[i]                # локальное соответсвие uid - номер строки\n",
-    "    uids_to_recommend = uids_test_map[uids_test_map.block == i].uid.values\n",
-    "    for j in range(len(block)):\n",
-    "        uid = block[j]\n",
-    "        user_df = training_df[training_df.uid == uid] # выбираем кусок df, соответствующий пользователю\n",
-    "        user_items = user_df.iid                      # список объектов, оцененных пользователем\n",
-    "        user_ratings = user_df.rating                 # рейтинги пользователя\n",
-    "        user_vect = csr_matrix((1, DICT_LEN))         # инициализируем пустой вектор пользователя\n",
-    "\n",
-    "        for iid, rating in zip(user_items, user_ratings):\n",
-    "            item_vect = items_matrix.getrow(id_to_ind[iid])\n",
-    "            user_vect += item_vect\n",
-    "            \n",
-    "        try:\n",
-    "            users_matrix = vstack([users_matrix, user_vect])\n",
-    "        except NameError:\n",
-    "            users_matrix = user_vect                 # составили \"локальную\" матрицу пользователей\n",
-    "            \n",
-    "    sim_matrix = cosine_similarity(users_matrix, items_matrix, dense_output=False) # матрица схожести\n",
-    "    recommender = ContentBasedRecommender_dummy(uid_to_ind_loc, id_to_ind, training_df, sim_matrix)\n",
-    "    recs = recommender.get_recs(uids_to_recommend)\n",
-    "    gl_recs.update(recs)\n",
-    "    del users_matrix, sim_matrix\n",
-    "    print(\"{} block done\".format(i))"
+    "recs = recommender.get_recs(test_dict.keys())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# uids_to_recommend = uids_test_map[uids_test_map.block == i].uid.values\n",
-    "# test__ = test_df.loc[test_df.uid.isin(uids_to_recommend)]\n",
-    "# dummy_test_dict = get_test_dict(test__)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -822,36 +596,23 @@
        "0.06001467351430668"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "hit_ratio(gl_recs, test_dict)"
+    "hit_ratio(recs, test_dict)"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### `HR@10` для item-based CF модели, созданной автором блокнота: 0.085"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Подcказки\n",
-    "* Определитесь с тем, что вы пытаетесь предсказать (рейтинги, вероятности, ...)\n",
-    "* Оптимальный способ вычисления матрицы схожести выглядит так:\n",
-    " * Привести строки в матрице `user x item` к единичной длине (выделяет основные предпочтения пользователя)\n",
-    " * Построить матрицу схожести `item x item`\n",
-    " * Для каждого объекта оставить только $K$ наиболее похожих объектов\n",
-    " * Для каждого объекта привести к единичной длине вектор схожести этого объекта (выделяет наиболее схожие объекты)\n",
-    "* Удалили ли вы из рекомендаций объекты, которые пользователь уже оценивал?\n",
-    "* Статья \"Item-Based Top-N Recommendation Algorithms\", Mukund Deshpande и George Karypis"
-   ]
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
